fix: rename old class to align to new impl

--- a/src/common/EventModal/styles.less
+++ b/src/common/EventModal/styles.less
@@ -20,7 +20,7 @@
             align-items: center;
             overflow: visible;
 
-            .modal-dialog-content {
+            .body-container {
                 overflow-y: visible;
             }
 
@@ -107,7 +107,7 @@
                 flex-direction: column;
                 align-items: center;
 
-                .modal-dialog-content {
+                .body-container {
                     overflow-y: auto;
                 }
 
